# keentune_target

./: .gitignore  Makefile  README.md  README_cn.md  compile.sh  keentune-target.service  keentune-target.spec  packup.py  requirements.txt  setup.cfg  setup.py  warpping.py
agent/: agent.py  target.conf
agent/common/: config.py  pylog.py  system.py
agent/controller/: backup.py  configure.py  detect.py  orig_conf.py  rollback.py  status.py
agent/domain/: __init__.py  hugepage.py  iperf.py  mycnf.py  net.py  nginx.py  sysbench.py  sysctl.py  wrk.py
debian/: changelog  control  keentune-target.install  keentune-target.postrm  keentune-target.prerm  lintian-overrides  rules  source.lintian-overrides
man/: keentune-target.8  keentune-target.conf.5  keentune-target.domain.7
test/: main.py  test_target_backup.py  test_target_configure.py  test_target_rollback.py  test_target_status.py
