[metadata]
name = keentune-target
version = 1.0
summary = KeenTune target unit
author = UNKNOWN
author_email = UNKNOWN
classifier =
    Environment:: KeenTune
    IntendedAudience :: Information Technology
    IntendedAudience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Intended Audience :: Developers
    Programming Language :: Python :: 3.6
    ProgrammingLanguage :: Python

[files]
packages = target
    
data_files = 
    /etc/keentune/conf   = target/target.conf
    /etc/keentune/conf   = target/configs/*
    /etc/keentune/script = target/script/*
    
requires = requirements.txt

[entry_points]
console_scripts = 
    keentune-target = target.target:main